--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medusa-plugin-auth",
-  "version": "1.11.1",
+  "version": "1.0.0",
   "description": "Social authentication plugin for medusajs 1.x",
   "keywords": [
     "social",
@@ -25,9 +25,9 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adrien2p/medusa-plugins.git"
+    "url": "git+https://github.com/xponential-asia/medusa-xpo-auth-plugins.git"
   },
-  "author": "Adrien de Peretti <adrien.deperetti@gmail.com",
+  "author": "Xponential",
   "files": [
     "api",
     "utils",
@@ -46,12 +46,15 @@
     "test:ci": "yarn add -D @medusajs/medusa@${MEDUSAJS_VERSION} && yarn run test"
   },
   "peerDependencies": {
-    "@medusajs/medusa": ">=1.16.x",
     "passport": "^0.6.0",
     "typeorm": "*"
   },
   "devDependencies": {
-    "@medusajs/medusa": ">=1.17.x",
+    "@medusajs/medusa": "1.20.0",
+    "@medusajs/types": "1.11.13",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.1.2",
     "@types/passport-auth0": "^1.0.9",
@@ -61,10 +64,13 @@
     "@types/passport-linkedin-oauth2": "^1.5.6",
     "@types/passport-oauth2": "^1.4.15",
     "jest": "^29.1.2",
+    "npm-run-all": "^4.1.5",
     "passport": "^0.6.0",
-    "ts-jest": "^29.0.3",
+    "semantic-release": "^24.2.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^8.6.2",
-    "typeorm": "^0.3.15"
+    "typeorm": "^0.3.15",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "@superfaceai/passport-twitter-oauth2": "^1.1.0",
@@ -109,5 +115,8 @@
     "setupFilesAfterEnv": [
       "<rootDir>/../setup-tests.js"
     ]
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
